--- a/Views/Projects/Archive.cshtml
+++ b/Views/Projects/Archive.cshtml
@@ -12,6 +12,26 @@
     string btUser = _UserManager.GetUserId(User);
 }
 
+<div class="page-header">
+    <div>
+        <h3>Archive Project</h3>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a asp-action="Index" asp-controller="Home">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a asp-action="AllProjects">Projects</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a asp-action="Details" asp-route-id="@Model.Id">Project Details</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Archive Project<li>
+            </ol>
+        </nav>
+    </div>
+</div>
+
 <div class="row">
     <div class="col-12 col-md-8 offset-md-2">
         <h2>Are you sure?</h2>
@@ -57,8 +77,8 @@
         </div>
         <form class="d-flex justify-content-between" asp-action="Archive" asp-route-id="@Model.Id">
             <input hidden asp-for="Id" />
-            <a asp-action="AllProjects" asp-controller="Projects" class="btn btn-outline-secondary rounded-pill btnLink">Cancel</a>
-            <button type="submit" class="btn btn-danger rounded-pill btnLink">Archive</button>
+            <a asp-action="AllProjects" asp-controller="Projects" class="btn btn-outline-secondary rounded-pill btnLink">Back to All Projects</a>
+            <button type="submit" class="btn btn-outline-danger rounded-pill btnLink">Archive</button>
         </form>
     </div>
 </div>
