--- a/Views/Companies/ManageUserRoles.cshtml
+++ b/Views/Companies/ManageUserRoles.cshtml
@@ -3,12 +3,33 @@
 
 @model IEnumerable<ManageUserRolesViewModel>
 
+@{
+    ViewData["Title"] = "Manage Roles";
+}
+
 <!-- DataTable -->
 <link rel="stylesheet" href="~/vendors/dataTable/datatables.min.css" type="text/css">
 
+<div class="page-header">
+    <div>
+        <h3>Manage User Roles</h3>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a asp-action="Index" asp-controller="Home">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="#">Company</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Manage User Roles</li>
+            </ol>
+        </nav>
+    </div>
+</div>
+
 <div class="card">
     <div class="card-body">
-        <h2 class="m-t-0 h3"><b>Manage Member Roles </b></h2>
+        <p class="textItalics">Select the roles of the members of your company. Then, click "Assign Role" when you're finished.</p>
         <table id="membersTable" class="table table-striped table-bordered">
             <thead>
                 <tr>
@@ -36,7 +57,7 @@
                         </td>
                         <td>
                             <div class="form-group">
-                                <input type="submit" value="Assign Role" class="btn btn-primary rounded-pill" />
+                                <input type="submit" value="Assign Role" class="btn btn-outline-primary rounded-pill" />
                             </div>
                         </td>
                         </form>
@@ -47,6 +68,24 @@
         </table>
     </div>
 </div>
+
+@section scripts {
+
+    <!-- DataTable -->
+    <script src="~/vendors/dataTable/datatables.min.js"></script>
+    <script src="~/assets/js/examples/datatable.js"></script>
+
+    <script>
+        $('#membersTable').DataTable({
+            "scrollY": "550px",
+            "scrollCollapse": true,
+        });
+
+        $(document).ready(function () {
+            $('#membersTable').DataTable();
+        });
+    </script>
+}
 
 @*<h2 class="m-t-0 h3"><b>Manage Member Roles </b></h2>
 <table id="membersTable" class="table table-striped table-bordered">
@@ -86,15 +125,4 @@
     </tbody>
 </table>*@
 
-@section scripts {
 
-    <!-- DataTable -->
-    <script src="~/vendors/dataTable/datatables.min.js"></script>
-    <script src="~/assets/js/examples/datatable.js"></script>
-
-    <script>
-        $(document).ready(function () {
-            $('#membersTable').DataTable();
-        });
-    </script>
-}
