--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,22 +4,14 @@
 
 @{
     ViewData["Title"] = "Home";
+    BTUser btUser = await UserManager.GetUserAsync(User);
+    //Layout = "/Views/Shared/_LayoutLanding.cshtml";
 }
 
 <div class="page-header d-md-flex justify-content-between">
     <div>
-        <h3>Welcome back, Bony!</h3>
-        <p class="text-muted">This page shows an overview for your account summary.</p>
-    </div>
-    <div class="mt-3 mt-md-0">
-        <div id="dashboard-daterangepicker" class="btn btn-outline-light">
-            <span></span>
-        </div>
-        <a href="#" class="btn btn-primary ml-0 ml-md-2 mt-2 mt-md-0 dropdown-toggle" data-toggle="dropdown">Create</a>
-        <div class="dropdown-menu dropdown-menu-right">
-            <a href="#" class="dropdown-item">Download</a>
-            <a href="#" class="dropdown-item">Print</a>
-        </div>
+        <h3>Welcome back, @btUser.FullName!</h3>
+        <p class="text-muted">This page shows an overview of your projects and tickets.</p>
     </div>
 </div>
 
