--- a/Views/Notifications/Index.cshtml
+++ b/Views/Notifications/Index.cshtml
@@ -1,83 +1,108 @@
 ﻿@model IEnumerable<BugTrackerMVC.Models.Notification>
+@using BugTrackerMVC.Services.Interfaces
+@using Microsoft.AspNetCore.Identity
+@using BugTrackerMVC.Extensions
+@inject IBTProjectService _BTProjectService
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "All Notifications";
 }
 
-<h1>Index</h1>
+<!-- DataTable -->
+<link rel="stylesheet" href="~/vendors/dataTable/datatables.min.css" type="text/css">
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Message)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Created)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HasBeenViewed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NotificationType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Ticket)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Project)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Sender)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Recipient)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Message)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Created)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HasBeenViewed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NotificationType.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ticket.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Project.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sender.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Recipient.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+<div class="page-header">
+    <div>
+        <h3>All Notifications</h3>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a asp-action="Index" asp-controller="Home">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="#">Notifications</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">All Notifications</li>
+            </ol>
+        </nav>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+
+        <div class="card">
+            <div class="card-body">
+
+                <table id="notifTable" class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Title)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Created)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.HasBeenViewed)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Ticket)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Project)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Recipient)
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Title)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Created)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.HasBeenViewed)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Ticket!.Title)
+                                </td>
+                                <td>
+                                    @*@((_BTProjectService.GetProjectByIdAsync(item.Ticket!.ProjectId, User.Identity!.GetCompanyId()).Result).Name)*@
+                                    @Html.DisplayFor(modelItem => item.Project!.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Recipient!.FullName)
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section scripts {
+
+    <!-- DataTable -->
+    <script src="~/vendors/dataTable/datatables.min.js"></script>
+
+    <script>
+        $('#notifTable').DataTable({
+            "scrollY": "550px",
+            "scrollCollapse": true,
+            responsive: true
+        });
+
+        $(document).ready(function () {
+            $('#notifTable').DataTable();
+        });
+    </script>
 }
-    </tbody>
-</table>
