--- a/Views/Projects/AllProjects.cshtml
+++ b/Views/Projects/AllProjects.cshtml
@@ -33,9 +33,13 @@
 
         <div class="card">
             <div class="card-body">
-                <p>
-                    <a asp-action="Create" class="btn btn-primary rounded-pill">Create New</a>
-                </p>
+
+                @* only admin or project manager can create projects *@
+                @if (User.IsInRole(nameof(BTRoles.Admin)) || User.IsInRole(nameof(BTRoles.ProjectManager))) {
+                    <p>
+                        <a asp-action="Create" class="btn btn-outline-primary rounded-pill">Create New</a>
+                    </p>
+                }
 
                 <table id="projectsTable" class="table table-striped table-bordered">
                     <thead>
@@ -72,29 +76,36 @@
                                     @Html.DisplayFor(modelItem => item.EndDate)
                                 </td>
                                 <td>
-                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary rounded-pill">Edit</a>
-                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary rounded-pill">Details</a>
-                                    @* show Archive button if project is not archived *@
-                                    @if (item.Archived == false)
+                                    @if (User.IsInRole(nameof(BTRoles.Admin)) || User.IsInRole(nameof(BTRoles.ProjectManager)))
                                     {
-                                        <a asp-action="Archive" asp-route-id="@item.Id" class="btn btn-danger rounded-pill">Archive</a>
+                                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary rounded-pill">Edit</a>
                                     }
-                                    @* Restore button if project is archived *@
-                                    else {
-                                        <a asp-action="Restore" asp-route-id="@item.Id" class="btn btn-success rounded-pill">Restore</a>
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary rounded-pill">Details</a>
+                                    @* show Archive button if project is not archived *@
+                                    @if (User.IsInRole(nameof(BTRoles.Admin)))
+                                    {
+                                        @if (item.Archived == false)
+                                        {
+                                            <a asp-action="Archive" asp-route-id="@item.Id" class="btn btn-outline-danger rounded-pill">Archive</a>
+                                        }
+                                        @* Restore button if project is archived *@
+                                        else
+                                        {
+                                            <a asp-action="Restore" asp-route-id="@item.Id" class="btn btn-outline-success rounded-pill">Restore</a>
+                                        }
                                     }
                                     @{
                                         BTUser? projectManager = await _BTProjectService.GetProjectManagerAsync(item.Id);
                                     }
                                     @if (projectManager is null && User.IsInRole(nameof(BTRoles.Admin)))
                                     {
-                                        <a class="btn btn-sm btn-info rounded-pill mx-2" asp-action="AssignProjectManager" asp-route-id="@item.Id">Assign PM</a>
+                                        <a class="btn btn-outline-info rounded-pill mx-2" asp-action="AssignProjectManager" asp-route-id="@item.Id">Assign PM</a>
                                     }
                                     else
                                     {
-                                        <a class="btn btn-sm btn-success rounded-pill" asp-action="AssignProjectManager" asp-route-id="@item.Id">@(projectManager?.FullName ?? "Unassigned")</a>
+                                        <a class="btn btn-outline-secondary rounded-pill" asp-action="AssignProjectManager" asp-route-id="@item.Id">@(projectManager?.FullName ?? "Unassigned")</a>
                                     }
-                                    <a asp-action="AddMembers" asp-route-id="@item.Id" class="btn btn-primary rounded-pill">Add Member(s)</a>
+                                    <a asp-action="AddMembers" asp-route-id="@item.Id" class="btn btn-outline-primary rounded-pill">Add Member(s)</a>
                                 </td>
                             </tr>
                         }
@@ -110,9 +121,14 @@
 
     <!-- DataTable -->
     <script src="~/vendors/dataTable/datatables.min.js"></script>
-    <script src="~/assets/js/examples/datatable.js"></script>
 
     <script>
+        $('#projectsTable').DataTable({
+            "scrollY": "500px",
+            "scrollCollapse": true,
+            responsive: true
+        });
+
         $(document).ready(function () {
             $('#projectsTable').DataTable();
         });
