--- a/Views/Projects/AssignProjectManager.cshtml
+++ b/Views/Projects/AssignProjectManager.cshtml
@@ -10,7 +10,7 @@
     <h3 class="my-5">Assign Project Manager</h3>
     <div class="card">
         <div class="card-header">
-            <div class="card-title">@Model.Project!.Name</div>
+            <div class="card-title">Project: @Model.Project!.Name</div>
         </div>
         <div class="card-body">
             <form asp-action="AssignProjectManager" method="post" class="d-flex flex-column">
@@ -19,13 +19,15 @@
                     <option value="">Unassigned</option>
                 </select>
                 <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-primary rounded-pill my-3 mx-2">Save</button>
-                    <a asp-action="Details" asp-route-id="@Model.Project!.Id" class="btn btn-secondary rounded-pill my-3">Cancel</a>
+                    <button type="submit" class="btn btn-outline-primary rounded-pill my-3 mx-2">Save</button>
                 </div>
             </form>
 
-            <div class="d-flex justify-content-center">
-                <a asp-action="AllProjects" class="btn btn-primary rounded-pill">Back to List</a>
+            <div class="col-12 col-lg-12">
+                <div class="d-flex justify-content-center">
+                    <a asp-action="AllProjects" class="btn btn-outline-primary rounded-pill mx-2">Back to Projects</a>
+                    <a asp-action="Details" asp-route-id="@Model.Project!.Id" class="btn btn-outline-secondary rounded-pill">Back to Project Details</a>
+                </div>
             </div>
         </div>
     </div>
