--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -9,7 +9,7 @@
 @inject IBTTicketHistoryService _BTTicketHistoryService
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Project Details";
 
     BTUser? projectManager = await _BTProjectService.GetProjectManagerAsync(Model.Id);
     string btUser = _UserManager.GetUserId(User);
@@ -17,16 +17,35 @@
 
 }
 
+<div class="page-header">
+    <div>
+        <h3>Project Details</h3>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a asp-action="Index" asp-controller="Home">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a asp-action="AllProjects">Projects</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Project Details</li>
+            </ol>
+        </nav>
+    </div>
+</div>
+
+<div>
+    @if (User.IsInRole(nameof(BTRoles.Admin)) || User.IsInRole(nameof(BTRoles.ProjectManager)))
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary rounded-pill">Edit This Project</a>
+    }
+</div>
+
 <div>
     <div class="container-fluid">
         <div class="row gy-2">
-            <div class="col-md-12 col">
+            <div class="col-md-12 col-12">
                 <div class="row col-cols-2 mt-5">
-                    <h1>Project Details</h1>
-
-                    <div class="d-flex justify-content-end my-2">
-                        <a asp-action="AllProjects" class="btn btn-primary rounded-pill">Back to List</a>
-                    </div>
 
                     <div class="card col m-1 p-2">
                         <div class="body">
@@ -44,7 +63,7 @@
                                         var today = DateTime.Now;
                                         var percent = today >= end ? 100 : today < start ? 0 : Math.Round((today.Subtract(start)) / (end.Subtract(start)) * 100);
                                     }
-                                    <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: @percent%;">
+                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: @percent%;">
                                         @* Use Progress Bar code variable here *@
                                         <span class="progress-value">@percent%</span>
                                     </div>
@@ -72,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col mt-5 ">
+            <div class="col-md-4 col-12 mt-5 ">
                 <div>
                     <div class="card m-1 p-2">
                         <div>
@@ -85,11 +104,20 @@
                                  class="rounded-circle"
                                  alt="project manager image" />
                             @(projectManager?.FullName ?? "Unassigned")
+
+                            @if (projectManager is null && User.IsInRole(nameof(BTRoles.Admin)))
+                            {
+                                <a class="btn btn btn-outline-info rounded-pill mx-2" asp-action="AssignProjectManager" asp-route-id="@Model.Id">Assign PM</a>
+                            }
+                            else
+                            {
+                                <a class="btn btn btn-outline-secondary rounded-pill" asp-action="AssignProjectManager" asp-route-id="@Model.Id">Change PM</a>
+                            }
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col mt-5 ">
+            <div class="col-md-4 col-12 mt-5 ">
                 <div>
                     <div class="card m-1 p-2">
                         <div>
@@ -111,13 +139,15 @@
                                     </li>
                                 }
 
+                                <a asp-action="AddMembers" asp-route-id="@Model.Id" class="btn btn-outline-primary rounded-pill">Add Member(s)</a>
+
                             </ul>
 
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col mt-5 ">
+            <div class="col-md-4 col-12 mt-5 ">
                 <div>
                     <div class="card m-1 p-2">
                         <div>
@@ -156,7 +186,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-12 col">
+            <div class="col-md-12 col-12">
                 <div class="mt-5">
                     <div class="card m-1 p-2">
                         <div>
@@ -191,7 +221,7 @@
                                                     {
                                                         if (User.IsInRole(nameof(BTRoles.Admin)) || User.IsInRole(nameof(BTRoles.ProjectManager)))
                                                         {
-                                                            <a class="btn btn-xs btn-info" asp-action="AssignDeveloper" asp-controller="Tickets" asp-route-id="@ticket.Id">Assign Dev</a>
+                                                            <a class="btn btn-xs btn-outline-info rounded-pill" asp-action="AssignDeveloper" asp-controller="Tickets" asp-route-id="@ticket.Id">Assign Dev</a>
                                                         }
 
                                                     }
@@ -229,6 +259,10 @@
                     </div>
 
                 </div>
+            </div>
+
+            <div class="d-flex justify-content-start my-2">
+                <a asp-action="AllProjects" class="btn btn-outline-primary rounded-pill">Back to Projects</a>
             </div>
         </div>
     </div>
