--- a/Views/Projects/Restore.cshtml
+++ b/Views/Projects/Restore.cshtml
@@ -57,8 +57,8 @@
         </div>
         <form class="d-flex justify-content-between" asp-action="Restore" asp-route-id="@Model.Id">
             <input hidden asp-for="Id" />
-            <a asp-action="ArchivedProjects" asp-controller="Projects" class="btn btn-outline-secondary rounded-pill btnLink">Cancel</a>
-            <button type="submit" class="btn btn-success rounded-pill btnLink">Restore</button>
+            <a asp-action="ArchivedProjects" asp-controller="Projects" class="btn btn-outline-secondary rounded-pill btnLink">Back to Archived Projects</a>
+            <button type="submit" class="btn btn-outline-success rounded-pill btnLink">Restore</button>
         </form>
     </div>
 </div>
